# spdlog-src

./: .gitignore  CMakeLists.txt  README.md
include/ZSend/config/: ConfigManager.hpp
include/ZSend/network/: Discovery.hpp  Protocol.hpp  Transfer.hpp
include/ZSend/utils/: NicknameGenerator.hpp
scripts/: build.bat  build.sh  buildAsan.bat  buildAsan.sh
src/: main.cpp
src/config/: ConfigManager.cpp
src/network/: Discovery.cpp  Transfer.cpp
src/utils/: NicknameGenerator.cpp
tests/: test_main.cpp
